crates-next/otter-vm/tests/compile_fail/native_closure_gc_capture_rejected.stderr
error[E0277]: `*const OpaqueLeaf` cannot be sent between threads safely
  --> tests/compile_fail/native_closure_gc_capture_rejected.rs:10:54
   |
10 |       let _ = otter_vm::native_value(&mut heap, "bad", move |_, _, _| {
   |               ----------------------                   ^-------------
   |               |                                        |
   |  _____________|________________________________________within this `{closure@$DIR/tests/compile_fail/native_closure_gc_capture_rejected.rs:10:54: 10:68}`
   | |             |
   | |             required by a bound introduced by this call
11 | |         std::hint::black_box(gc);
12 | |         Ok(otter_vm::Value::Undefined)
13 | |     });
   | |_____^ `*const OpaqueLeaf` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/native_closure_gc_capture_rejected.rs:10:54: 10:68}`, the trait `Send` is not implemented for `*const OpaqueLeaf`
note: required because it appears within the type `PhantomData<*const OpaqueLeaf>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `Gc<OpaqueLeaf>`
  --> $WORKSPACE/crates-next/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it's used within this closure
  --> tests/compile_fail/native_closure_gc_capture_rejected.rs:10:54
   |
10 |     let _ = otter_vm::native_value(&mut heap, "bad", move |_, _, _| {
   |                                                      ^^^^^^^^^^^^^^
note: required by a bound in `native_value`
  --> src/native_function.rs
   |
   | pub fn native_value<F>(
   |        ------------ required by a bound in this function
...
   |         + Send
   |           ^^^^ required by this bound in `native_value`

error[E0277]: `*const OpaqueLeaf` cannot be shared between threads safely
  --> tests/compile_fail/native_closure_gc_capture_rejected.rs:10:54
   |
10 |       let _ = otter_vm::native_value(&mut heap, "bad", move |_, _, _| {
   |               ----------------------                   ^-------------
   |               |                                        |
   |  _____________|________________________________________within this `{closure@$DIR/tests/compile_fail/native_closure_gc_capture_rejected.rs:10:54: 10:68}`
   | |             |
   | |             required by a bound introduced by this call
11 | |         std::hint::black_box(gc);
12 | |         Ok(otter_vm::Value::Undefined)
13 | |     });
   | |_____^ `*const OpaqueLeaf` cannot be shared between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/native_closure_gc_capture_rejected.rs:10:54: 10:68}`, the trait `Sync` is not implemented for `*const OpaqueLeaf`
note: required because it appears within the type `PhantomData<*const OpaqueLeaf>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `Gc<OpaqueLeaf>`
  --> $WORKSPACE/crates-next/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it's used within this closure
  --> tests/compile_fail/native_closure_gc_capture_rejected.rs:10:54
   |
10 |     let _ = otter_vm::native_value(&mut heap, "bad", move |_, _, _| {
   |                                                      ^^^^^^^^^^^^^^
note: required by a bound in `native_value`
  --> src/native_function.rs
   |
   | pub fn native_value<F>(
   |        ------------ required by a bound in this function
...
   |         + Sync
   |           ^^^^ required by this bound in `native_value`
